tools/shook/src/snapshots/shook__config__tests__test_valid_config-runners_with_default.snap
---
source: src/config.rs
expression: "serde_json::to_string_pretty(&config).unwrap()"
---
{
  "devop": {
    "allowed_repositories": "self-host-runner",
    "allowed_users": "Glatzel",
    "token": "token_xxxxx",
    "vendor": "github",
    "webhook_secret": "webhook_secret_xxxxxxx"
  },
  "kioyu": {
    "max_retries": 1,
    "memory": 10000
  },
  "runners": {
    "ghar-linux-dev-small": {
      "count": 1,
      "cpus": 2,
      "envs": {
        "FOO": "BAR"
      },
      "image": "ghcr.io/glatzel/ghar-linux-dev",
      "memory": 2048,
      "name": "ghar-linux-dev-small",
      "ports": {
        "123": 456,
        "456": 123
      },
      "secrets": {
        "SFOO": [
          "SBAR",
          "https://www.google.com/"
        ]
      },
      "volumes": {
        "/host_dir": "/target_dir",
        "/host_dir1": "/target_dir1/default"
      }
    }
  },
  "server": {
    "port": 8787
  }
}
