tools/shook/src/snapshots/shook__config__tests__test_valid_config-runners_with_default_and_mode.snap
---
source: src/config.rs
expression: "serde_json::to_string_pretty(&config).unwrap()"
---
{
  "devop": {
    "allowed_repositories": [
      "self-host-runner"
    ],
    "allowed_users": [
      "Glatzel"
    ],
    "token": "token_xxxxx",
    "vendor": "github",
    "webhook_secret": "webhook_secret_xxxxxxx"
  },
  "kioyu": {
    "memory": 10000
  },
  "runners": {
    "ghar-linux-dev-small": {
      "count": 1,
      "cpus": 2,
      "envs": {
        "FOO": "BAR_DEFAULT"
      },
      "image": "ghcr.io/glatzel/ghar-linux-dev",
      "memory": 2048,
      "name": "ghar-linux-dev-small",
      "ports": {
        "123": 456
      },
      "secrets": {
        "SFOO": [
          "SBAR_DEFAULT",
          "https://www.google.com/123"
        ]
      },
      "volumes": {
        "/host_dir": "/target_dir"
      }
    }
  },
  "server": {
    "port": 8787
  }
}
